# phoenix_studio_bot_open

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.yml  pyproject.toml  run.py
app/: handlers.py  keyboards.py  messages.py  middlewares.py  states.py
app/admin/: filters.py  handlers.py  keyboards.py  states.py
app/database/: models.py  requests.py
app/database/admin/: requests.py
